--- a/districts.html
+++ b/districts.html
@@ -12,7 +12,7 @@
    
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color: #0434ccc4;height:70px">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="./home.html">Home</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
              <span class="navbar-toggler-icon"></span>
           </button>
