--- a/alappuzha.html
+++ b/alappuzha.html
@@ -12,14 +12,15 @@
    
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color: #0434ccc4;height:70px">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Brand</a>
+          <!-- <a class="navbar-brand" href="#">Brand</a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
              <span class="navbar-toggler-icon"></span>
-          </button>
+          </button> -->
          <div class="collapse navbar-collapse" id="main_nav">
            <ul class="navbar-nav ms-auto">
-            <li class="nav-item" ><a class="nav-link" href="./login.html"> Login </a></li>
-           <li class="nav-item"><a class="nav-link" href="./districts.html"> Districts </a></li>
+            <li class="nav-item" ><a class="nav-link " href="./home.html"> Home </a></li>
+            <li class="nav-item" ><a class="nav-link " href="./login.html"> Login </a></li>
+           <li class="nav-item"><a class="nav-link active" href="./districts.html"> Districts </a></li>
            <li class="nav-item"><a class="nav-link" href="./Register.html"> Register </a></li>
            </ul>
          </div> <!-- navbar-collapse.// -->
