--- a/alappuzha.html
+++ b/alappuzha.html
@@ -12,18 +12,19 @@
    
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color: #0434ccc4;height:70px">
         <div class="container-fluid">
-          <!-- <a class="navbar-brand" href="#">Brand</a>
-         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
-             <span class="navbar-toggler-icon"></span>
-          </button> -->
-         <div class="collapse navbar-collapse" id="main_nav">
-           <ul class="navbar-nav ms-auto">
-            <li class="nav-item" ><a class="nav-link " href="./home.html"> Home </a></li>
-            <li class="nav-item" ><a class="nav-link " href="./login.html"> Login </a></li>
-           <li class="nav-item"><a class="nav-link active" href="./districts.html"> Districts </a></li>
-           <li class="nav-item"><a class="nav-link" href="./Register.html"> Register </a></li>
-           </ul>
-         </div> <!-- navbar-collapse.// -->
+            <div class="col-md-8">
+                <p style="float:left !important;font-size: 35px;color:rgb(10, 81, 10)"><i>Kerala Tourism </i></p>
+              </div>
+             <div class="collapse navbar-collapse"  id="main_nav">
+               <ul class="navbar-nav ms-auto">
+                <li class="nav-item" ><i><a style="font-size: 25px !important;" class="nav-link " href="./home.html"> Home </a></i></li>
+                <li class="nav-item" ><i><a style="font-size: 25px !important;" class="nav-link " href="./login.html"> Login </a></i></li>
+               <li class="nav-item"><i><a style="font-size: 25px !important;" class="nav-link active" href="./districts.html"> Districts </a></i></li>
+               <li class="nav-item"><i><a style="font-size: 25px !important;" class="nav-link" href="./Register.html"> Register </a></i></li>
+               
+               </ul>
+               
+             </div>  <!-- navbar-collapse.// -->
         </div> <!-- container-fluid.// -->
        </nav>     
     </head>
