--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
                  poster="https://assets.getsmartcontent.com/KX7MLH9M/21bta-personalization-summer-video-fnl-optimized-poster.jpg"> 
                  <nav class="navbar fixed-top navbar-expand-lg navbar-dark " style="background-color: #0434ccc4;height:70px">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="#">Brand</a>
-                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
-                         <span class="navbar-toggler-icon"></span>
-                      </button>
-                     <div class="collapse navbar-collapse" id="main_nav">
-                       <ul class="navbar-nav ms-auto">
-                       <li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
-                       <li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
-                       <li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
-                       </ul>
-                     </div> <!-- navbar-collapse.// -->
+                        <div class="col-md-8">
+                            <p style="float:left !important;font-size: 35px;color:rgb(10, 81, 10)"><i>Kerala Tourism </i></p>
+                          </div>
+                         <div class="collapse navbar-collapse"  id="main_nav">
+                           <ul class="navbar-nav ms-auto">
+                            <li class="nav-item" ><i><a style="font-size: 25px !important;" class="nav-link active" href="./home.html"> Home </a></i></li>
+                            <li class="nav-item" ><i><a style="font-size: 25px !important;" class="nav-link " href="./login.html"> Login </a></i></li>
+                           <li class="nav-item"><i><a style="font-size: 25px !important;" class="nav-link " href="./districts.html"> Districts </a></i></li>
+                           <li class="nav-item"><i><a style="font-size: 25px !important;" class="nav-link" href="./Register.html"> Register </a></i></li>
+                           
+                           </ul>
+                           
+                         </div> 
                     </div> <!-- container-fluid.// -->
                    </nav>  
                   <source src="./v1.mp4" type="video/mp4">    
